# Labs_OOP

./: README.md  fun.cpp
lab1/: CMakeLists.txt  fun.h  main.cpp
test/: tests.cpp
